--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -10,7 +10,7 @@ tags: pwn
 --------
 
 ## cpp_pwn
-[cpp基础底层知识]()
+[cpp基础底层知识](https://4ak5ra.github.io/2024/12/27/cpp_pwn/)
 
 ## vm_pwn
 
@@ -25,4 +25,7 @@ tags: pwn
 
 ## 堆
 
-[堆基础知识点](https://4ak5ra.github.io/2024/12/30/%E5%A0%86/)
+[堆基础知识点](https://4ak5ra.github.io/2024/12/30/%E5%A0%86/)  
+
+
+[fastbin-attack](https://4ak5ra.github.io/2025/01/25/fastbin-attack/)
