--- a/_posts/2024-12-24-环境.md
+++ b/_posts/2024-12-24-环境.md
@@ -77,5 +77,42 @@ define dis                #简记命令
     disassemble $arg0
 end
 ```
+## patch
+下载patchelf和glibc all in one
+```bash
+git clone https://github.com/NixOS/patchelf
+git clone https://github.com/matrix1001/glibc-all-in-one
+python3 update_list             #更新最新版本的glibc
+cat list  
+
+patchelf --set-interpreter 新的ld文件的路径 当前程序名
+
+patchelf --replace-needed ldd第二行的`==>`前的libc名 新的libc文件的路径 当前程序名
+```
+
+
+```bash
+Inconsistency detected by ld.so: dl-version.c: 224: _dl_check_map_versions: Assertion `needed != NULL' failed!
+```
+这个报错参考这个佬的方案：[hfctf_2020_marksman](https://www.cnblogs.com/ZIKH26/articles/16044588.html)
+```bash
+Getting 2.27-3ubuntu1_amd64
+  -> Location: https://mirror.tuna.tsinghua.edu.cn/ubuntu/pool/main/g/glibc/libc6_2.27-3ubuntu1_amd64.deb
+  -> Downloading libc binary package
+Failed to download package from https://mirror.tuna.tsinghua.edu.cn/ubuntu/pool/main/g/glibc/libc6_2.27-3ubuntu1_amd64.deb
+```
+这里我因为因为docker的不知道什么的网络问题(git又可以用)下载不了，只好手动下载了
+## docker
+### 开容器
+常用选项
+
+```bash
+docker run -it -p 23946:23946 -v D:\docker:/work --privileged --name test 04317a6b90c1 
+```
+
+### 获取对应libc版本的容器
+某些版本ubuntu会导致pach libc失败，所以还是需要拉取一整个docker的，一般配置一个自己的模板环境然后上传到docker hub然后在大佬们写好的镜像上改就好了
+
 -----
 持续更新中
+
