--- a/_posts/2024-12-24-环境.md
+++ b/_posts/2024-12-24-环境.md
@@ -88,6 +88,8 @@ cat list
 patchelf --set-interpreter 新的ld文件的路径 当前程序名
 
 patchelf --replace-needed ldd第二行的`==>`前的libc名 新的libc文件的路径 当前程序名
+
+dpkg-deb -x 文件名.deb /path/to/extract/
 ```
 
 
