--- a/_posts/2025-2-11-计算机网络入门.md
+++ b/_posts/2025-2-11-计算机网络入门.md
@@ -7,7 +7,7 @@
 了解计算机网络实际上也就是了解这个`转换`的原理
 
 ### 集线器与局域网(LAN)
-在网络系统未引入的背景下，我们想从其他计算机中获取数据就只能通过网线进行传输(设计IO、中断、缓冲区等内核层面的知识，此处不展开)。
+在网络系统未引入的背景下，我们想从其他计算机中获取数据就只能通过网线进行传输(涉及IO、中断、缓冲区等内核层面的知识，此处不展开)。
 但是如果多台计算机想要共享数据的话就会造成复杂的数据线设计方式，n台计算机就需要n-1根数据线和其他计算机连接，需要消耗2n-1根数据线
 
 所以网络系统设计了一个`集线器`的东西，将网线的另一端接到集线器上让其做个数据的中间管理员，再把数据发出去，像这样：    
@@ -15,16 +15,17 @@
 
 这里的线是电缆线，线上的数据表示最大位宽，这样一个简单的设计就让数据线减少了几乎一倍,但节省最大的还是计算机上连接网络的端口数量
 
-此时发送的数据就有变化了，因为集线器只是不加分辨的将从一个端口上收到的的数据复制给其他端口，此时就会造成数据混乱的问题(其他主机就不知道该数据是否是自己请求的那一份)。 
+此时发送的数据就有变化了，因为集线器只是`不加分辨`的将从一个端口上收到的的数据复制给其他端口，此时就会造成数据混乱的问题(其他主机就不知道该数据是否是自己请求的那一份)。 
 
 所以在数据的最开始添加两个`MAC地址`(也叫物理地址)的信息，分别是发送方的mac地址和接收方的mac地址。  
-此时数据就由两部分组成，标识该数据的的`header`和数据本身的`payload` 
+此时数据就由两部分组成，标识该数据的的`header`和数据本身的`payload`。   
+
 这样一个主机+电缆+集线器组成的`系统`就叫以太网(局域网的范围内)，范围通常在一个建筑内
 ### 网桥(桥)
 为了解决集线器不加分辨的将从一个端口上收到的的数据复制给其他端口造成的`带宽浪费`和`数据泄露`的问题，引入网桥这一物理设备设计了`桥接以太网`系统：
 ![桥接以太网](https://s2.loli.net/2025/02/12/DpjJdxOMa2KeGF7.png)  
 
-网桥将以太网结构进行了再组织，并且可以识别header进而将包(header+payload的总称)发给指定的端口
+网桥将以太网结构进行了再组织，并且可以对数据进一步响应，也就是可以把数据发给指定端口的主机
 
 值得注意的是现代计算机系统中已经将桥的物理设备换成了更高级的`集线器`(有更多的转发端口，更高的网络带宽等)
 [网桥与交换机的区别与联系](https://blog.csdn.net/gioc/article/details/84648307)
@@ -33,18 +34,19 @@
 而当网络系统覆盖到全世界范围时，所处理的数据就将是千变万化的，并且数据所携带的信息也是各种各样的，此时就要面临`兼容性问题`。 所以设计出了更高层次的结构`互联网络` 
 
 使用特殊的`计算机`--路由器 将多个不同的局域网(采用不同的技术实现的局域网，如无线局域网，令牌环网，上面说的以太网等等)系统连接起来。
-作为一个计算机，路由器可以执行比集线器和交换机更复杂的，比如运行一个`协议软件`实现一种`协议`，这种协议消除了不同网络之间的差异。
+作为一个计算机，路由器可以执行比集线器和交换机更复杂的功能，比如运行一个`协议软件`实现一种`协议`，这种协议消除了不同网络之间的差异。
 一般协议需要提供`命名机制`和`传送机制`两种最基本的功能，这是一个简单的实现示意图：
 ![互联网](https://s2.loli.net/2025/02/12/DRjezkbVlLn21Tm.png)
 
 这是著名的互联网络系统`因特网`的实现
 
-[因特网](https://s2.loli.net/2025/02/12/5MnmW4tAX7C6LUe.png)
+![因特网](https://s2.loli.net/2025/02/12/5MnmW4tAX7C6LUe.png)
 
 我们可以看到用户的代码种使用了一套名为`套接字接口`的系统调用，这是网络系统中`封装思想`的一个具体实现。  
 使用这套函数(套接字接口本质是一组函数)我们不用关心具体的网络层结构需要的和协议规定的数据格式(也就是header)而集中在数据本身编写程序
 
-![数据包](https://s2.loli.net/2025/02/12/D6GSfYjiRPxz7mO.png)
+![数据包](https://s2.loli.net/2025/02/12/D6GSfYjiRPxz7mO.png)   
+
 我们写的内容只是蓝色的数据那一部分，而实际发送出去的是这三段
 
 上面是网络系统层级的数据链路层和网络层和传输层的物理实现，完整的大体结构可以参考这个[计算机网络的七层结构、五层结构和四层结构](https://blog.csdn.net/sinat_40770656/article/details/113787888)
@@ -52,19 +54,20 @@
 linux套接字接口的设计可以实现任何的底层协议，但其`第一个实现的`是tcp/ip协议(传输控制协议/互联网络协议)，可见其重要性。  
 
 该协议实际上是一个协议族，包含了各种各样的不同功能的协议，比如应用层的`http协议`，传输层的`tcp协议`和`udp协议`，网络层的`ip协议`
-这里只讲解我见到最多的tcp协议(其他的没有深入了解)
+这里只讲解我见到最多的tcp协议(~~其他的我也不会~~)
 
 TCP协议的数据帧的首部共5行，每行32bit一共20bytes
 
-[tcp协议](https://s2.loli.net/2025/02/12/TYOiq7mN61HbSfj.png)
+![tcp协议](https://s2.loli.net/2025/02/12/TYOiq7mN61HbSfj.png)
 
-tcp协议也包含了很多协议，比如`窗口`那一栏的数据是基于滑动窗口协议设计的，长度为16位，共2个字节。此字段用来进行流量控制。流量控制的单位为字节数，这个值是本端期望一次接收的字节数    
+tcp协议也包含了很多协议，比如`窗口`那一栏的数据是基于[滑动窗口协议](https://blog.csdn.net/qq_53144843/article/details/120907815)设计的，长度为16bit。此字段用来进行流量控制。流量控制的单位为字节数，这个值是本端期望一次接收的字节数    
 
 以及基与`延迟和累计确认`方式的`确认序号`数据段：标识了报文接收端期望接收的字节序列。
 如果设置了ACK控制位，确认序号的值表示一个准备接收的包的序列码，它所指向的是准备接收的包，也就是下一个期望接收的包的序列码
 
-需要注意的是tcp/ip协议中的每个层的协议都不是独立的，而是层层递进的，TCP协议就是是基于IP协议的基础上传输的。
-所以后面的协议中的数据可能但看没有什么具体的意义，但是结合之前的报文来看就有具体的意义了
+需要注意的是tcp/ip协议中的每个层的协议都不是独立的，而是层层递进的，TCP协议就是基于IP协议的基础上传输的。   
+
+所以后面的协议中的数据可能但看没有什么具体的意义，但是结合之前的报文来看就有具体的意义了.    
 比如源端口号表示报文的发送端口，占16位。`tcp协议`中的源端口和`ip协议中`的源IP地址组合起来，可以标识报文的发送地址
 
 其他的内容可以自行搜索学习
@@ -75,7 +78,7 @@ tcp协议也包含了很多协议，比如`窗口`那一栏的数据是基于滑
 socket起源于Unix，而Unix基本哲学之一就是“一切皆文件”，都可以用“打开open –> 读写write/read –> 关闭close”模式来操作。
 Socket就是该模式的一个实现，socket即是一种特殊的文件，与其配套的socket函数就是对其进行的操作（读/写IO、打开、关闭）
 ### socket地址结构
-从内核角度：一个套接字就是通信的一个端点，(需要补充的是现在进行网络通信的对象以及从上面提到的主机具体到了进程，port就是和pid一样的标识这些进程的数据)
+从内核角度：一个套接字就是通信的一个端点，(需要补充的是现在进行网络通信的对象已经从上面提到的主机具体到了进程，port就是和pid一样的标识这些进程的数据)
 而在linux角度来说套接字就是一个有相应文件描述符的打开文件。套接字接口的基础是`套接字地址结构`，里面包含了用于通信的基本信息
 
 ```c
@@ -112,19 +115,17 @@ struct in_addr {
 
 #### 具体实现从上面所描述过程可知：
 1. 客户与服务器进程的作用是非对称的，因此代码不同。
-2. 服务器进程一般是先启动的。只要系统运行，该服务进程一直存在，直到正常或强迫终止。
-基本TCP套接字编程
-基于 TCP 的套接字编程的所有客户端和服务器端都是从调用socket 开始，它返回一个套接字描述符。客户端随后调用connect 函数，服务器端则调用 bind、listen 和accept 函数。套接字通常使用标准的close 函数关闭。代码实现可以参考：[初识tcp--tcp编程部分](https://samsara-lo.github.io/2024/12/27/%E5%88%9D%E8%AF%86TCP)
+2. 服务器进程一般是先启动的。只要系统运行，该服务进程一直存在，直到正常或强迫终止。 
+
+
+基于 TCP 的套接字编程的所有客户端和服务器端都是从调用socket 开始，它返回一个套接字描述符。客户端随后调用connect 函数，服务器端则调用 bind、listen 和accept 函数。套接字通常使用标准的close 函数关闭。
+代码实现可以参考：[初识tcp--tcp编程部分](https://samsara-lo.github.io/2024/12/27/%E5%88%9D%E8%AF%86TC)
 
 ## 简单的nc程序
 
 了解了socket网络编程后就可以简单的实现一个`客户端-服务器编程模式`了。下面的nc程序就是简单的例子，程序有服务端和客户端两种模式
 但都只是把收到的数据原封不动的发送回去。
-```bash
-gcc -o nc nc.c
-```
-然后命令行输入对应参数即可使用。感兴趣的也可以用`gdb`调试着玩一下，2025的HgamePwnWeek1的ezstack就是考的这个
-![nc](https://s2.loli.net/2025/02/12/ySCBt6DdEqeJzlO.png)
+
 
 ```c
 #include <stdio.h>
@@ -288,3 +289,10 @@ int main(int argc, char *argv[]) {
 return 0;
 }
 ```
+```bash
+gcc -o nc nc.c
+```
+然后命令行输入对应参数即可使用。感兴趣的也可以用`gdb`调试着玩一下，2025HgamePwnWeek1的ezstack就是考的这个
+![nc](https://s2.loli.net/2025/02/12/ySCBt6DdEqeJzlO.png)
+
+用python来实现更简单，几十行命令就能搞定，可以自己尝试一下
