--- a/_posts/2025-2-11-计算机网络入门.md
+++ b/_posts/2025-2-11-计算机网络入门.md
@@ -119,7 +119,7 @@ struct in_addr {
 
 
 基于 TCP 的套接字编程的所有客户端和服务器端都是从调用socket 开始，它返回一个套接字描述符。客户端随后调用connect 函数，服务器端则调用 bind、listen 和accept 函数。套接字通常使用标准的close 函数关闭。
-代码实现可以参考：[初识tcp--tcp编程部分](https://samsara-lo.github.io/2024/12/27/%E5%88%9D%E8%AF%86TC)
+代码实现可以参考：[初识tcp--tcp编程部分](https://samsara-lo.github.io/2024/12/27/%E5%88%9D%E8%AF%86TCP)
 
 ## 简单的nc程序
 
