--- a/_posts/2025-2-11-计算机网络入门.md
+++ b/_posts/2025-2-11-计算机网络入门.md
@@ -123,7 +123,7 @@ struct in_addr {
 
 ## 简单的nc程序
 
-了解了socket网络编程后就可以简单的实现一个`客户端-服务器编程模式`了。下面的nc程序就是简单的例子，程序有服务端和客户端两种模式
+了解了socket网络编程后就可以简单的实现一个`客户端-服务器编程模式程序`了。下面的nc程序就是简单的例子，程序有服务端和客户端两种模式
 但都只是把收到的数据原封不动的发送回去。
 
 
