--- a/_posts/2025-2-11-计算机网络入门.md
+++ b/_posts/2025-2-11-计算机网络入门.md
@@ -1,3 +1,9 @@
+---
+redirect_from: /_posts/2018-07-03-%E8%AF%91%E7%A0%81%E6%98%BE%E7%A4%BA%E7%94%B5%E8%B7%AF/
+title: 计算机网络入门
+tags: web_pwn
+---
+
 ## 学习来源
 这篇文章主要记录计算机网络的思想，详细的知识细节可以在`各种书籍`(csapp就很不错)和`浏览器`中找到，这个博客的目的不在于此
 
