--- a/_posts/2024-12-23-pwn索引.md
+++ b/_posts/2024-12-23-pwn索引.md
@@ -15,7 +15,8 @@ tags: pwn
 ## vm_pwn
 
 [vm_pwn学习+24长城杯avm练习](https://4ak5ra.github.io/2024/12/24/avm/)
-
+## webpwn
+[计算机网络入门](https://4ak5ra.github.io/2025/02/11/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C%E5%85%A5%E9%97%A8/)
 ## 栈
 ### 基础
 [覆写之ret2text](https://4ak5ra.github.io/2025/01/02/pwn%E5%85%A5%E9%97%A8%E4%B8%89%E9%83%A8%E6%9B%B2%E4%B9%8Bret2text/)
@@ -25,7 +26,7 @@ tags: pwn
 
 ## 堆
 
-[堆基础知识点](https://4ak5ra.github.io/2024/12/30/%E5%A0%86/)  
+[函数流程与设计](https://4ak5ra.github.io/2024/12/30/%E5%A0%86/)  
 
-
+## 刷题
 [fastbin-attack](https://4ak5ra.github.io/2025/01/25/fastbin-attack/)
