--- a/_posts/2024-12-24-环境.md
+++ b/_posts/2024-12-24-环境.md
@@ -34,9 +34,13 @@ cat /proc/sys/kernel/randomize_va_space
 
 关闭aslr：
 ```bash
-echo 0 > /proc/sys/kernel/randomize_va_space
+sudo echo 0 > /proc/sys/kernel/randomize_va_space
 ```
 
+权限不够用这个
+```bash
+sudo bash -c 'echo 0 > /proc/sys/kernel/randomize_va_space'
+```
 ## 设置运行参数
 gsb启动之后可以设置运行程序参数
 gdb filename
@@ -110,6 +114,11 @@ Failed to download package from https://mirror.tuna.tsinghua.edu.cn/ubuntu/pool/
 
 ```bash
 docker run -it -p 23946:23946 -v D:\docker:/work --privileged --name test 04317a6b90c1 
+```
+
+### 解压
+```bash
+dpkg-deb -x name.deb /path
 ```
 
 ### 获取对应libc版本的容器
