--- a/_posts/2025-2-20-heap函数流程与设计.md
+++ b/_posts/2025-2-20-heap函数流程与设计.md
@@ -80,7 +80,7 @@ __libc_malloc (size_t bytes)
 
 这里我们把free后的chunk叫做bin，malloc的chunk直接叫chunk
 
-所以：malloc时，如果nb(规范后的申请的size)可以直接在对应fastbin，smallbin中找到就直接返回该bin(找到的同时话还会把同size的bin合并到tcache中)，不能的话就会根据有无fastbin(有就进入)进入malloc_consolidate，该函数会把fastbin放进unsortedbin(这里是对内存整理的准备)，之后会把unsortedbin的chunk再分配到smallbin或largebin中。该过程中还会将比nb大的smallbin切割返回。整理完后去largebin中寻找有没有等于nb的bin。最后会用`binmap`遍历所有的bin，找到`>nb`的bin(因为到此流程中就证明没有`=nb`的bin了)切割将其返回。如果以上流程都没用返回就切割topchunk。这里附上一张大佬的流程图
+所以：malloc时，如果nb(规范后的申请的size)可以直接在对应fastbin，smallbin中找到就直接返回该bin(找到的同时话还会把同size的bin合并到tcache中)，不能的话就会根据有无fastbin(有就进入)进入malloc_consolidate，该函数会把fastbin放进unsortedbin(这里是对内存整理的准备)，之后会把unsortedbin的chunk再分配到smallbin或largebin中。该过程中还会将比nb大的smallbin切割返回。整理完后去largebin中寻找有没有等于nb的bin。最后会用`binmap`遍历所有的bin，找到`>nb`的bin(因为到此流程中就证明没有`=nb`的bin了)切割将其返回。如果以上流程都没有返回就切割topchunk。这里附上一张大佬的流程图
 [分配]()
 
 看下面的代码最好自己手里有一份源码对照着看，不然可能会被我的修改弄昏头
@@ -103,10 +103,10 @@ if ((unsigned long) (nb) <= (unsigned long) (get_max_fast ()))
     }
   }
   #endif
-	      void *p = chunk2mem (victim);  /* 将head转化为data */
+	      void *p = chunk2mem (victim);  // 将head转化为data
 	      alloc_perturb (p, bytes);
 	      return p;
-        /* 最后再统一的返回p，提高兼容性 */
+        // 最后再统一的返回p，提高兼容性 
 }
 
 if (in_smallbin_range (nb));
@@ -125,9 +125,9 @@ else
 {
     idx = largebin_index (nb);
     if (atomic_load_relaxed (&av->have_fastchunks))  
-        malloc_consolidate (av);  /* 把fastbin合并到unsortedbin中 */
+        malloc_consolidate (av);  // 把fastbin合并到unsortedbin中 
 }
-  #if USE_TCACHE   /* 当fastbin，smallbin都不满足时，才会进入这个if */
+  #if USE_TCACHE   // 当fastbin，smallbin都不满足时，才会进入这个if 
   {
   INTERNAL_SIZE_T tcache_nb = 0;
   size_t tc_idx = csize2tidx (nb);
@@ -304,4 +304,117 @@ else
 
 ```c
 
+static void _int_free(mstate av, mchunkptr p, int have_lock) 
+{
+
+    const char *errstr = NULL;
+   
+
+    size = chunksize(p);
+
+    if (__glibc_unlikely(size < MINSIZE || !aligned_OK (size))) 
+    {
+        goto errout;
+    }
+
+    check_inuse_chunk(av, p);
+
+    if ((unsigned long) (size) <= (unsigned long) (get_max_fast ())) 
+    {
+        free_perturb(chunk2mem(p), size - 2 * SIZE_SZ);
+        set_fastchunks(av);
+        unsigned int idx = fastbin_index(size);
+        fb = &fastbin(av, idx);
+        mchunkptr old = *fb, old2;
+        unsigned int old_idx = ~0u;
+        do 
+        {
+            if (have_lock && old != NULL)
+                old_idx = fastbin_index(chunksize(old));
+            p->fd = old2 = old;
+        } 
+        while ((old = catomic_compare_and_exchange_val_rel(fb, p, old2)) != old2);
+    }
+    else if (!chunk_is_mmapped(p)) 
+    {
+        nextchunk = chunk_at_offset(p, size);
+        nextsize = chunksize(nextchunk);
+        free_perturb(chunk2mem(p), size - 2 * SIZE_SZ);
+        if (!prev_inuse(p)) 
+        {
+            prevsize = p->prev_size;
+            size += prevsize;
+            p = chunk_at_offset(p, -((long ) prevsize));
+            unlink(av, p, bck, fwd);
+        }
+        if (nextchunk != av->top) 
+        {
+                nextinuse = inuse_bit_at_offset(nextchunk, nextsize);
+
+                if (!nextinuse) 
+                {
+                    unlink(av, nextchunk, bck, fwd);
+                    size += nextsize;
+                } 
+                else
+                    clear_inuse_bit_at_offset(nextchunk, 0);
+                bck = unsorted_chunks(av);
+                fwd = bck->fd;
+                if (__glibc_unlikely(fwd->bk != bck)) 
+                {
+                errstr = "free(): corrupted unsorted chunks";
+                goto errout;
+                }
+                p->fd = fwd;
+                p->bk = bck;
+                if (!in_smallbin_range(size)) 
+                {
+                    p->fd_nextsize = NULL;
+                    p->bk_nextsize = NULL;
+                }
+                bck->fd = p;
+                fwd->bk = p;
+                set_head(p, size | PREV_INUSE);
+                set_foot(p, size);
+                check_free_chunk(av, p);
+        }
+        else 
+        {
+                size += nextsize;
+                set_head(p, size | PREV_INUSE);
+                av->top = p;
+                check_chunk(av, p);
+        }
+      if ((unsigned long) (size) >= FASTBIN_CONSOLIDATION_THRESHOLD)
+      {
+        if (have_fastchunks(av))
+                malloc_consolidate(av);
+        if (av == &main_arena) 
+        {
+    #ifndef MORECORE_CANNOT_TRIM
+                if ((unsigned long) (chunksize(av->top))
+                        >= (unsigned long) (mp_.trim_threshold))
+                    systrim(mp_.top_pad, av);
+    #endif
+        }
+        else 
+        {
+                heap_info *heap = heap_for_ptr(top(av));  //此线程为非主分配区就获得top chunk对应的非主分配区的heap_info指针，调用heap_trim尝试缩小该heap
+                heap_trim(heap, mp_.top_pad);
+        }
+        
+        if (!have_lock) 
+        {
+            assert(locked);
+            (void) mutex_unlock(&av->mutex);
+        }
+    
+      }
+    }
+    else 
+    {
+        munmap_chunk(p);
+    }
+
+}
 ```
