--- a/_posts/2025-2-20-heap重要函数.md
+++ b/_posts/2025-2-20-heap重要函数.md
@@ -149,7 +149,7 @@ unlink(AV, P, BK, FD)
     
     FD = P->fd;		// FD=fwd,BK=bck
     BK = P->bk;			    
-    if (__builtin_expect (FD->bk != P || BK->fd != P, 0))	// 检擦该chunk是否为双向链表
+    if (__builtin_expect (FD->bk != P || BK->fd != P, 0))	
       malloc_printerr ("corrupted double-linked list");			      
     else 
     {								      
@@ -158,21 +158,21 @@ unlink(AV, P, BK, FD)
 
         if (  (!in_smallbin_range (chunksize_nomask (P)))  &&  (P->fd_nextsize != NULL)  )
         {		      
-	    if (  (P->fd_nextsize->bk_nextsize != P) || (P->bk_nextsize->fd_nextsize != P)  )
+	    if (  (P->fd_nextsize->bk_nextsize != P) || (P->bk_nextsize->fd_nextsize != P)  )  //如果是有size指针的largebin
 	      malloc_printerr ("corrupted double-linked list (not small)");   
-            if (FD->fd_nextsize == NULL) 
+            if (FD->fd_nextsize == NULL)    
             {				      
-                if (P->fd_nextsize == P)				      
-                  FD->fd_nextsize = FD->bk_nextsize = FD;		      
-                else 
-                {			//该chunk的size指针完全为空				      
+                if (P->fd_nextsize == P)	    
+                  FD->fd_nextsize = FD->bk_nextsize = FD;		   // 该组bin有同size的bin 且 是bins中唯一size的bin      
+                else   //最复杂的情况，该组bin有多个size的bin，且不是bins中唯一size的bin
+                {						      
                     FD->fd_nextsize = P->fd_nextsize;			      
                     FD->bk_nextsize = P->bk_nextsize;			      
                     P->fd_nextsize->bk_nextsize = FD;			      
                     P->bk_nextsize->fd_nextsize = FD;			      
                 }							      
             } 
-            else 
+            else    //该bins只有一个bin或者bin都没用同size的其它bin(只有竖着的size链)
             {							      
                 P->fd_nextsize->bk_nextsize = P->bk_nextsize;		      
                 P->bk_nextsize->fd_nextsize = P->fd_nextsize;		      
