--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -14,20 +14,20 @@ permalink: /comments/
 
 ----
 
-- [k4per](http://8.129.16.251/):一起打pwn(~~坐牢~~)的哥们
+- [k4per](https://k4per-blog.xyz):一起打pwn(~~坐牢~~)的哥们
 
 
-- [Samsāra](https://samsara-lo.github.io/):ReverseMaster
+- [Samsāra](https://samsara-lo.github.io/):全能的re师傅，什么都会
 
 
-- [QYQS](https://qyqs1.github.io/):二级制扛把子
+- [QYQS](https://qyqs1.github.io/):二进制扛把子
 
 
-- [FOX](https://rockfox0.github.io/):密码✌
+- [FOX](https://rockfox0.github.io/):神奇密码✌
 
-- [komiko](https://notion-next-yeye.vercel.app/):密码大手子
+- [komiko](https://notion-next-yeye.vercel.app/):密码+ai 大手子
 
-- [KiraKiraAyu](http://kkayu.com/)：Web✌
+- [KiraKiraAyu](https://www.kkayu.com/)：Web✌+ 前端大师
 
-- [ivory](http://120.76.159.54:8080/)：web大手子
+- [ivory](https://ireel.github.io/)：web大手子
 
