--- a/_posts/2025-3-27-encoder.md
+++ b/_posts/2025-3-27-encoder.md
@@ -80,7 +80,8 @@ __int64 content;
 
 再根据 idx 的判断把 0x5060 处的数据定义为 `struct page[0x1f]`。然后去其他函数把剩下的成员逆出来。还是优先去简单的函数逆，逆不出来再去复杂的函数。这里的 show 函数就很合适
 
-```c  have = 0;
+```c  
+have = 0;
 void __fastcall sub_170F()
 {
   int wirte_len; // eax
@@ -386,4 +387,4 @@ free(5)
 inter()
 ```
 
-[附件]([ctf_attachment/算法逆向/2025软件系统安全赛华东赛区/encoder at main · 4ak5ra/ctf_attachment](https://github.com/4ak5ra/ctf_attachment/tree/main/算法逆向/2025软件系统安全赛华东赛区/encoder))
+[附件](https://github.com/4ak5ra/ctf_attachment/tree/main/算法逆向/2025软件系统安全赛华东赛区/encoder)
