--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -5,12 +5,9 @@ permalink: /comments/
 ---
 
 
-
-
-
 - [elegy](https://yuan0x1elegy.love/):带我入门的巨佬师傅♥♥
 
-
+- [wake0p](https://wake0p.github.io/):低调的大佬，名不显时心不朽
 
 ----
 
