--- a/_posts/2025-4-13-Su-msg.md
+++ b/_posts/2025-4-13-Su-msg.md
@@ -223,7 +223,7 @@ configs = new_cfg(op, name, content, updated)
 
 大概流程就是先将一个 `struct CMD对象` 的数据传入到栈上的缓冲区, 然后用 `parseTLVCfgCMD` 函数根据这些数据构造 `cfgcmd_queue` 对象(这个过程可以理解为反序列化, 此时该对象包含的是完整的 CMD 对象的信息), 然后调用 `handleCMD` 函数根据 `消息类型(描述对象的一种信息)` 来处理用户指定的这些信息, 我们主要利用第一种消息类型, 此时调用 `handle_dispatch` 来进行消息种类匹配(cmd_target 对象匹配事先注册好的 handle, 此时我们主要利用本地这种类型), 处理 `msg_queue` 对象的 data 成员(CfgCMD), 这里就是菜单操作了, 这些命令会操作对应 handle 的 `vec_objs` 对象(储存 Config*的).
 
-这里 [Samsāra]([Samsāraのblog](https://samsara-lo.github.io/))师傅告诉我了一个很有用的 ida 小技巧（👍） : 在注释里写上一个地址, 双击的时候就可以直接跳转过去, 像这样
+这里 [Samsāra](https://samsara-lo.github.io/) 师傅告诉我了一个很有用的 ida 小技巧（👍） : 在注释里写上一个地址, 双击的时候就可以直接跳转过去, 像这样
 
 
 
