--- a/_posts/2025-4-13-Su-msg.md
+++ b/_posts/2025-4-13-Su-msg.md
@@ -1,6 +1,11 @@
+---
+redirect_from: /_posts/2018-07-03-%E8%AF%91%E7%A0%81%E6%98%BE%E7%A4%BA%E7%94%B5%E8%B7%AF/
+title: Su_Msg
+tags: 复现
+---
 ## 对象逆向
 
-数据结构+算法的思想, 首先是数据结构, 也就是这里的对象(类).
+数据结构和算法分开看, 首先是数据结构, 也就是这里的对象(类).
 
 ```c++
 class Handler {
