--- a/_posts/2025-4-13-Su-msg.md
+++ b/_posts/2025-4-13-Su-msg.md
@@ -638,3 +638,4 @@ ph.sendline(b"T")
 ph.interactive()
 ```
 
+[SUCTF-2025/pwn/SU_msg_cfgd at master · team-su/SUCTF-2025](https://github.com/team-su/SUCTF-2025/tree/master/pwn/SU_msg_cfgd)
