--- a/_posts/2024-12-23-comments.md
+++ b/_posts/2024-12-23-comments.md
@@ -24,7 +24,7 @@ permalink: /comments/
 
 - [komiko](https://notion-next-yeye.vercel.app/):密码+ai 大手子
 
-- [KiraKiraAyu](https://www.kkayu.com/)：Web✌+ 前端大师
+- [KiraKiraAyu](https://www.kkayu.com/)：代审大师+ 前端大王
 
 - [ivory](https://ireel.github.io/)：web大手子
 
